# nymphes-osc

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  README.md  async_test.py  basic_control_param_test.py  config.txt  main.py  midi_test.py  nymphes-osc.spec  nymphes_osc.desktop  nymphes_osc.py  nymphes_osc.service  nymphes_osc.spec  preset_test.txt  pyproject.toml  requirements.txt  run.py
nymphes_osc/: AmpParams.py  BasicControlParameter.py  ControlParameter_Basic.py  ControlParameter_Legato.py  ControlParameter_LfoKeySync.py  ControlParameter_LfoType.py  ControlParameter_ModSource.py  ControlParameter_Modulated.py  ControlParameter_PlayMode.py  HpfParams.py  LegatoControlParameter.py  Lfo1Params.py  Lfo2Params.py  LfoKeySyncControlParameter.py  LfoTypeControlParameter.py  LpfParams.py  MixParams.py  ModSourceControlParameter.py  ModulatedControlParameter.py  NymphesMIDI.py  NymphesMidiOscBridge.py  NymphesOSC.py  NymphesPreset.py  OscillatorParams.py  PitchFilterEnvParams.py  PitchFilterLfoParams.py  PitchParams.py  PlayModeControlParameter.py  PresetEvents.py  ReverbParams.py  __main__.py  config_handling.py  default_preset.txt  model.py  sysex_handling.py  temp.py
nymphes_osc/logs/: log.txt  log.txt.1  log.txt.2  log.txt.3
nymphes_osc/src/: NymphesMidiOscBridge.py  __main__.py  cli.py  config.txt  sysex_handling.py
src/: __init__.py
src/nymphes_midi/: MidiConnectionEvents.py  NymphesMIDI.py  NymphesPreset.py  PresetEvents.py
src/nymphes_osc/: AmpParams.py  ControlParameter_LfoType.py  HpfParams.py  LpfParams.py  MixParams.py  NymphesMidiOscBridge.py  NymphesOSC.py  ReverbParams.py  (+5 more)
(+13 files in other folders)
