[tool.poetry]
name = "nymphes-osc"
version = "0.1.0"
description = ""
authors = ["Scott Lumsden <jtpack@gmail.com>"]
readme = "README.md"
packages = [{include = "nymphes_osc"}]

[tool.poetry.dependencies]
python = "^3.10"
python-osc = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
