[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nymphes-osc"
version = "1.0.1"
description = "A command-line app which allows OSC communication with the Dreadbox Nymphes MIDI synthesizer"
readme = "README.md"
authors = [{name = "Scott Lumsden", email = "jtpack@gmail.com"}]
license = { file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["MIDI", "OSC", "Nymphes"]
dependencies = [
    "mido",
    "python-osc",
    "protobuf",
    "netifaces",
    "zeroconf",
    "pyinstaller",
    "python_rtmidi; sys_platform != 'win32'"
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/jtpack/nymphes-osc"
